# SN-Rust-G8

./: .gitignore  Cargo.toml  README.md  config.toml  filesentinel-windows1.rar  main.rs  test.txt
backup/: test.txt
mon_projet/: tes.txt  test.txt
src/: errors.rs  main.rs
src/cli/: commands.rs
src/compression/: mod.rs
src/config/: settings.rs
src/filters/: rules.rs
src/network/: mod.rs
src/notifications/: mod.rs
src/synchro/: engine.rs
src/tui/: app.rs  events.rs  mod.rs  ui.rs
src/versioning/: mod.rs
src/watcher/: inotify_watcher.rs  mod.rs  polling.rs  types.rs
test_source/subdir/: data.txt
