[package]
name = "filesentinel-snrust"
version = "0.1.0"
edition = "2024"

[dependencies]

# Hachage
md-5 = "0.10"
sha2 = "0.10"
hex = "0.4"

# Filtres
glob = "0.3"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Système de fichiers
walkdir = "2.4"

# Temps
chrono = { version = "0.4", features = ["serde"] }

# Gestion d'erreurs
anyhow = "1.0"
thiserror = "1.0"

# Compression
flate2 = "1.0"
tar = "0.4"

# Notifications desktop (multi-plateforme)
notify-rust = "4.10"

# Utilitaires
whoami = "1.4"
log = "0.4"
env_logger = "0.10"

# Pour la surveillance (multi-plateforme)
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
# Pas de dépendances spécifiques à Windows pour l'instant

[target.'cfg(target_os = "macos")'.dependencies]
# fsevent-sys = "4.1"  # Déjà inclus dans notify avec macos_kqueue